After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725837 - pango: textoverlay: lot of warnings in debug log with framerate=0/1
pango: textoverlay: lot of warnings in debug log with framerate=0/1
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-06 16:59 UTC by Adrien SCH.
Modified: 2014-03-06 17:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to downgrade the log entry from warning to log (704 bytes, patch)
2014-03-06 16:59 UTC, Adrien SCH.
committed Details | Review

Description Adrien SCH. 2014-03-06 16:59:23 UTC
Created attachment 271121 [details] [review]
Patch to downgrade the log entry from warning to log

Hello guys,

Using basetextoverlay with realtime stream (framerate set to 0/1) is quite annoying but the log trace is filled by this trace :

0:00:11.945580080 28493 0x7ff734001b70 WARN                   pango gstbasetextoverlay.c:2126:gst_base_text_overlay_video_chain:<clockoverlay0> no duration, assuming minimal duration

From my opinion, this isn't a warning log but more a internal log, so my suggestion is too downgrade the log level of this line to LOG.

Attachement : The patch to push if accepted.
Comment 1 Nicolas Dufresne (ndufresne) 2014-03-06 17:25:51 UTC
(In reply to comment #0)
> 0:00:11.945580080 28493 0x7ff734001b70 WARN                   pango
> gstbasetextoverlay.c:2126:gst_base_text_overlay_video_chain:<clockoverlay0> no
> duration, assuming minimal duration

can you describe what the impact on the code of not having any way to figure-out duration ? I'm suggesting that if the developer have made this trace a warning, it's because he didn't test that case. Have you contacted the developer ?
Comment 2 Adrien SCH. 2014-03-06 17:32:14 UTC
I didn't contact the developer, and for me there is no impact in that case to failed to retrieve the duration and assuming the minimal duration.
Comment 3 Tim-Philipp Müller 2014-03-06 17:53:27 UTC
Please don't contact any developers (me, in this case) directly, bugzilla is the right place to handle this :)

I think this is perfectly reasonable. It would be great if you could submit a patch in git format-patch format next time though, thanks!

commit a9d98c57a4dd06996932f98462bed65d0a93b95c
Author: Adrien Schwartzentruber <adrien.schwartzentruber@gmail.com>
Date:   Thu Mar 6 17:49:09 2014 +0000

    pango: demote debug WARNING to LOG for variable framerate video input
    
    No need why we need to warn about that, it's perfectly allowed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=725837

(PS: and please stop filing bugs against versions that have not been released yet, that's confusing :))