pango: demote debug WARNING to LOG for variable framerate video input

No need why we need to warn about that, it's perfectly allowed.

https://bugzilla.gnome.org/show_bug.cgi?id=725837